# Moms-Canning-Timer

./: .deepsource.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZATION.md  PLANNING.md  README.md  SECURITY.md  Timer Example.py  USAGE.md  __init__.py  __main__.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  timer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: codeql-analysis.yml  push-to-pypi.yml  pytest.yml
docs/: TESTING.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  PRIVACY.md  TERMS.md
tests/: test_entrypoint.py  test_init.py  test_main.py
timer/: Timer Example.py  timer.py
