[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "Moms-Canning-Timer"
version = "0.2.0"
authors = [
  { name= "willtheorangeguy" },
]
description = "Customizable 15-minute stove top timers, created for preserving fruits and veggies for the winter."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[project.urls]
"Homepage" = "https://github.com/Dog-Face-Development/Moms-Canning-Timer"
"Bug Tracker" = "https://github.com/Dog-Face-Development/Moms-Canning-Timer/issues"
